# pydicom-xml

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pydicom_xml/: __init__.py  xmlrep.py
tests/: conftest.py  test_integration.py  test_multipart.py  test_xmlrep.py
